# FrenchAudioTranscriber

./: main.py  pyproject.toml  requirements.txt  test_audio_processing.py  test_file.opus
