[tool.poetry]
name = "repl-nix-frenchaudiotranscriber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
transformers = "^4.45.1"
ffmpeg-python = "^0.2.0"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"
torch = "^2.4.1"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
